Screen misalignment bug fix
1. index.html additional container class removed
2. tooltip width no longer need to be specified, width and height
replaced by white-space: inline;
3. specified size for modifier-tiles added. Size was reduced by 20%.

--- a/src/components/Tooltip/Tooltip.css
+++ b/src/components/Tooltip/Tooltip.css
@@ -1,4 +1,3 @@
-.tooltip-container {
-	width: 388px;
-  height: 90px;  
+.mobile .tooltip-container {
+  padding: 0.15rem;
 }
